adjustment in job title

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <div class="card-body border-danger mb-3">
                   <img class="bordas-img" src="img/erlon.png" alt="it's me :)">
                   <h3 id="name">ERLON D. N. JÚNIOR</h3>
-                  <p id="profission" class="card-text">Engenheiro de Software</p>
+                  <p id="profission" class="card-text">Desenvolvedor</p>
                   <hr>
                   <a id="facebook-color" class="btn color-white" href="https://www.facebook.com/erlondnjr" target="_blank"><i class="fa fa-facebook-square"></i></a>
                   <a id="instagram-color" class="btn color-white" href="https://www.instagram.com/ejr_geek/" target="_blank"><i class="fa fa-instagram"></i></a>
