--- a/index.html
+++ b/index.html
@@ -24,14 +24,12 @@
         
         <div class="center">
             <div class="card text-center sm-3">
-                <div class="card-body border-danger mb-3">
+                <div class="card-body border-danger sm-3">
                   <img class="bordas-img" src="img/erlon.png" alt="it's me :)">
                   <h3 id="name">ERLON D. N. JÚNIOR</h3>
-                  <p id="profission" class="card-text">Desenvolvedor</p>
+                  <p id="profission" class="card-text">[ FullStack Developer ]</p>
+                  <p id="profission" class="card-text"></p>
                   <hr>
-                  <a id="facebook-color" class="btn color-white" href="https://www.facebook.com/erlondnjr" target="_blank"><i class="fa fa-facebook-square"></i></a>
-                  <a id="instagram-color" class="btn color-white" href="https://www.instagram.com/ejr_geek/" target="_blank"><i class="fa fa-instagram"></i></a>
-                  <a id="twitter-color" class="btn color-white" href="https://twitter.com/ejr_geek" target="_blank"><i class="fa fa-twitter"></i></a>
                   <a id="linkedin-color" class="btn color-white" href="https://www.linkedin.com/in/ejrgeek/" target="_blank"><i class="fa fa-linkedin"></i></a>
                   <a id="wordpress-color" class="btn color-white" href="https://erlonbcc.wordpress.com/" target="_blank"><i class="fa fa-globe"></i></a>
                   <a id="github-color" class="btn color-white" href="https://github.com/ejrgeek" target="_blank"><i class="fa fa-github"></i></a>
@@ -43,9 +41,11 @@
 
 
         <footer>
-            <div style="position: fixed; left: 0; bottom: 0; width: 100%; color: white;
-            text-align: center; padding: 10px;">
-                <p style="margin: 5px 0 0 0 ">© 2020 | <a href="mailto:ejrgeek@gmail.com">ejrgeek@gmail.com</a> | @ejr_geek
+            <div class="footer">
+                <p>
+                    <a aria-disabled="true">© 2020</a>|
+                    <a class="tHover" href="mailto:ejrgeek@gmail.com">ejrgeek@gmail.com</a>| 
+                    <a class="tHover" href="https://www.instagram.com/ejr_geek/">@ejr_geek</a>
                 </p>
             </div>
         </footer>
