--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
                   <p id="profission" class="card-text">[ FullStack Developer ]</p>
                   <p id="profission" class="card-text"></p>
                   <hr>
-                  <a id="linkedin-color" class="btn color-white" href="https://www.linkedin.com/in/ejrgeek/" target="_blank"><i class="fa fa-linkedin"></i></a>
-                  <a id="wordpress-color" class="btn color-white" href="https://erlonbcc.wordpress.com/" target="_blank"><i class="fa fa-globe"></i></a>
-                  <a id="github-color" class="btn color-white" href="https://github.com/ejrgeek" target="_blank"><i class="fa fa-github"></i></a>
-                  <a id="lattes-color" class="btn color-white" href="http://lattes.cnpq.br/8430770538420375" target="_blank"><i class="fa fa-folder"></i></a>
+                  <a id="linkedin-color" class="btn color-white botoes" href="https://www.linkedin.com/in/ejrgeek/" target="_blank"><i class="fa fa-linkedin"></i></a>
+                  <a id="wordpress-color" class="btn color-white botoes" href="https://erlonbcc.wordpress.com/" target="_blank"><i class="fa fa-globe"></i></a>
+                  <a id="github-color" class="btn color-white botoes" href="https://github.com/ejrgeek" target="_blank"><i class="fa fa-github"></i></a>
+                  <a id="lattes-color" class="btn color-white botoes" href="http://lattes.cnpq.br/8430770538420375" target="_blank"><i class="fa fa-folder"></i></a>
                   
                 </div>
               </div>
@@ -43,9 +43,9 @@
         <footer>
             <div class="footer">
                 <p>
-                    <a aria-disabled="true">© 2020</a>|
-                    <a class="tHover" href="mailto:ejrgeek@gmail.com">ejrgeek@gmail.com</a>| 
-                    <a class="tHover" href="https://www.instagram.com/ejr_geek/">@ejr_geek</a>
+                    <a aria-disabled="true" class="footerA">© 2020</a>|
+                    <a class="tHover footerA" href="mailto:ejrgeek@gmail.com">ejrgeek@gmail.com</a>| 
+                    <a class="tHover footerA" href="https://www.instagram.com/ejr_geek/">@ejr_geek</a>
                 </p>
             </div>
         </footer>
