--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <div class="card-body border-danger sm-3">
                   <img class="bordas-img" src="img/erlon.png" alt="it's me :)">
                   <h3 id="name">ERLON D. N. JÚNIOR</h3>
-                  <p id="profission" class="card-text">[ FullStack Developer ]</p>
+                  <p id="profission" class="card-text">[ FullStack Developer Django ]</p>
                   <p id="profission" class="card-text"></p>
                   <hr>
                   <a id="linkedin-color" class="btn color-white botoes" href="https://www.linkedin.com/in/ejrgeek/" target="_blank"><i class="fa fa-linkedin"></i></a>
