button behance add

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
                   <a id="linkedin-color" class="btn color-white botoes" href="https://www.linkedin.com/in/ejrgeek/" target="_blank"><i class="fa fa-linkedin"></i></a>
                   <a id="wordpress-color" class="btn color-white botoes" href="https://erlonbcc.wordpress.com/" target="_blank"><i class="fa fa-globe"></i></a>
                   <a id="github-color" class="btn color-white botoes" href="https://github.com/ejrgeek" target="_blank"><i class="fa fa-github"></i></a>
+                  <a id="behance-color" class="btn color-white botoes" href="https://www.behance.net/ejr_geek" target="_blank"><i class="fa fa-behance"></i></a>
                   <a id="lattes-color" class="btn color-white botoes" href="http://lattes.cnpq.br/8430770538420375" target="_blank"><i class="fa fa-folder"></i></a>
                   
                 </div>
