Add button for channel </CoDiv> on Discord

--- a/index.html
+++ b/index.html
@@ -36,11 +36,21 @@
                   <a id="behance-color" class="btn color-white botoes" href="https://www.behance.net/ejr_geek" target="_blank"><i class="fa fa-behance"></i></a>
                   <a id="google-play-color" class="btn color-white botoes" href="https://play.google.com/store/apps/dev?id=7981791578797224218&hl=pt-BR" target="_blank"><img src="https://img.icons8.com/ios-glyphs/24/000000/google-play.png"></a>
                   <a id="lattes-color" class="btn color-white botoes" href="http://lattes.cnpq.br/8430770538420375" target="_blank"><i class="fa fa-folder"></i></a>
-                  
                 </div>
+
+                <div class="card-footer">
+                    <ul class="list-group list-group-flush">
+                        <a id="discord-color" class="btn color-white botoes"
+                            href="https://play.google.com/store/apps/dev?id=7981791578797224218&hl=pt-BR"
+                            target="_blank">
+                            <img src="https://img.icons8.com/ios-filled/24/000000/discord-logo.png"/>
+                            Entre no canal &lt;/CoDiv&gt;!
+                        </a>
+                    </ul>
+                </div>
+
               </div>
         </div>
-
 
         <footer>
             <div class="footer">
