--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                             href="https://play.google.com/store/apps/dev?id=7981791578797224218&hl=pt-BR"
                             target="_blank">
                             <img src="https://img.icons8.com/ios-filled/24/000000/discord-logo.png"/>
-                            Entre no canal &lt;/CoDiv&gt;!
+                            Entre no canal &lt;/CoDiv&gt;
                         </a>
                     </ul>
                 </div>
