add link discord

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <div class="card-footer">
                     <ul class="list-group list-group-flush">
                         <a id="discord-color" class="btn color-white botoes"
-                            href="https://play.google.com/store/apps/dev?id=7981791578797224218&hl=pt-BR"
+                            href="https://discord.gg/2y7Ujgm"
                             target="_blank">
                             <img src="https://img.icons8.com/ios-filled/24/000000/discord-logo.png"/>
                             Entre no canal &lt;/CoDiv&gt;
