chore: add new job

--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
                   <img class="bordas-img" src="img/erlon.png" alt="it's me :)">
                   <h3 id="name">ERLON D. N. JÚNIOR</h3>
                   <p id="profission" class="card-text">[ Software engineer ]</p>
-                  <p id="profission" class="card-text">[ Dev FullStack Django/Angular na <a href="https://intmed.com.br/">Intmed</a> ]</p>
+                  <p id="profission" class="card-text">[ Dev FullStack Django/Angular @ <a href="https://intmed.com.br/">Intmed</a> ]</p>
+                  <p id="profission" class="card-text">[ Dev Backend @ <a href="https://www.conceptu.ind.br/">Conceptu</a> ]</p>
                   <hr>
                   <a id="linkedin-color" class="btn color-white botoes" href="https://www.linkedin.com/in/ejrgeek/" target="_blank"><i class="fa fa-linkedin"></i></a>
                   <a id="wordpress-color" class="btn color-white botoes" href="https://erlonbcc.wordpress.com/" target="_blank"><i class="fa fa-globe"></i></a>
@@ -41,11 +42,11 @@
 
                 <div class="card-footer">
                     <ul class="list-group list-group-flush">
-                        <a id="discord-color" class="btn color-white botoes"
-                            href="https://discord.gg/2y7Ujgm"
+                        <a id="curve-color" class="btn color-white botoes"
+                            href="https://play.google.com/store/apps/details?id=com.ejrgeek.curve_app"
                             target="_blank">
-                            <img src="https://img.icons8.com/ios-filled/24/000000/discord-logo.png"/>
-                            Entre no canal &lt;/CoDiv&gt;
+                            <img src="https://i.imgur.com/Hw0rlgC.jpg"/>
+                            Baixe agora o Curve App
                         </a>
                     </ul>
                 </div>
@@ -67,9 +68,9 @@
         <footer>
             <div class="footer">
                 <p>
-                    <a aria-disabled="true" class="footerA">© 2020</a>|
+                    <a aria-disabled="true" class="footerA">© 2021</a>|
                     <a class="tHover footerA" href="mailto:ejrgeek@gmail.com">ejrgeek@gmail.com</a>| 
-                    <a class="tHover footerA" href="https://www.instagram.com/ejr_geek/">@ejr_geek</a>
+                    <a class="tHover footerA" href="https://www.instagram.com/ejrgeek/">@ejr_geek</a>
                 </p>
             </div>
         </footer>
