chore: add new pic

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div class="center">
             <div class="card text-center sm-3">
                 <div class="card-body border-danger sm-3">
-                  <img class="bordas-img" src="img/erlon.png" alt="it's me :)">
+                  <img class="bordas-img" src="img/pp.jpeg" alt="it's me :)">
                   <h3 id="name">ERLON D. N. JÚNIOR</h3>
                   <p id="profission" class="card-text">[ Software engineer ]</p>
                   <p id="profission" class="card-text">[ Dev FullStack Django/Angular @ <a href="https://intmed.com.br/">Intmed</a> ]</p>
