--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                         <div class="row justify-content-center profission">
                             <div class="row">
                                 <p>
-                                    Developer • Researcher • Speaker • Enthusiast
+                                    Desenvolvedor • Pesquisador • Palestrante • Entusiasta
                                 </p>
                             </div>
                         </div>
@@ -52,7 +52,7 @@
                         <div class="row justify-content-center profission">
                             <div class="row">
                                 <p>
-                                    Information Security • Computer Vision • Internet Of Things
+                                    Segurança da Informação • Visão Computacional • Internet das Coisas
                                 </p>
                             </div>
                         </div>
