--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
 
 <body id="bg">
 
+    <h1 class="eVisivel">Em breve disponivel para dispositivos moveis e telas menores</h1>
+
     <div class="container-fluid">
         <div class="row">
             <div class="col-md-6">
@@ -33,7 +35,7 @@
                     <div class="container">
                         <div class="row justify-content-center">
                             <h5 id="name">
-                                Erlon D. N. Júnior, 21 anos
+                                Erlon D. N. Júnior, 22 anos
                             </h5>
                         </div>
                     </div>
@@ -52,7 +54,7 @@
                         <div class="row justify-content-center profission">
                             <div class="row">
                                 <p>
-                                    Segurança da Informação • Visão Computacional • Internet das Coisas
+                                    SegInfo • Visão Comp. • IoT
                                 </p>
                             </div>
                         </div>
@@ -98,7 +100,7 @@
                     <br>
                     <div class="container">
                         <div class="row justify-content-center profission">
-                            <p class="topico">Clientes</p>
+                            <p class="topico">Trabalhos</p>
                         </div>
 
                         <ul class="list-group list-group-flush">
@@ -138,7 +140,6 @@
 
         </div>
     </div>
-
 
     <!-- JAVASCRIPT -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
