--- a/index.html
+++ b/index.html
@@ -69,6 +69,10 @@
                         </div>
 
                         <div class="row justify-content-center">
+                            <a id="ejrgeekio-color" class="btn color-white botoes"
+                                href="https://ejrgeekio.com/nosso-time/" target="_blank">
+                                <img src="img/icon-white.png" alt="logo" style="height: 24px;">
+                            </a>
                             <a id="linkedin-color" class="btn color-white botoes"
                                 href="https://www.linkedin.com/in/ejrgeek/" target="_blank"><i
                                     class="fa fa-linkedin"></i></a>
