--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                         <div class="row justify-content-center profission">
                             <div class="row">
                                 <p>
-                                    Desenvolvedor • Pesquisador • Palestrante • Entusiasta
+                                    Professor • Desenvolvedor • Pesquisador • Palestrante • Entusiasta
                                 </p>
                             </div>
                         </div>
