refatoraçao do portfolio

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                         <div class="row justify-content-center profission">
                             <div class="row">
                                 <p>
-                                    Professor • Desenvolvedor • Pesquisador • Palestrante • Entusiasta
+                                    Professor • Desenvolvedor • Pesquisador • Palestrante
                                 </p>
                             </div>
                         </div>
@@ -65,7 +65,7 @@
                     <br>
                     <div class="container">
                         <div class="row justify-content-center profission">
-                            <p class="topico">Meus lugares importantes</p>
+                            <p class="topico">Outros lugares importantes</p>
                         </div>
 
                         <div class="row justify-content-center">
@@ -128,10 +128,10 @@
 
                         <div class="row justify-content-center profission">
                             <p>
-                                E-mail: <a href="mailto:ejrgeek@gmail.com">ejrgeek@gmail.com</a>
+                                E-mail: <a href="mailto:erlon.junior@ejrgeekio.com">erlon.junior@ejrgeekio.com</a>
                                 <br>
                                 Instagram: <a
-                                    href="https://www.instagram.com/ejrgeek/">@ejr_geek</a>
+                                    href="https://www.instagram.com/erlon.dn.jr/">@erlon.dn.jr</a>
                             </p>
                         </div>
                     </div>
