chore: new links, colors, imagens

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <br />
             <br />
             <br />
-            <div class="row justify-content-center">
+            <div class="row justify-content-center text-center">
               <h5 id="name">Erlon D. N. Júnior, 22 anos</h5>
             </div>
           </div>
@@ -88,7 +88,7 @@
                 target="_blank"
               >
                 <img src="img/l-bg-p.png" />
-                Vem conhecer minha empresa
+                Minha empresa
               </a>
             </ul>
           </div>
@@ -96,7 +96,7 @@
           <hr />
           <br />
           <div class="container">
-            <div class="row justify-content-center profission">
+            <div class="row justify-content-center profission text-center">
               <p class="topico">Outros lugares importantes</p>
             </div>
 
@@ -123,6 +123,11 @@
                 target="_blank"
                 ><i class="fa fa-globe"></i
               ></a>
+            </div>
+
+            <br />
+
+            <div class="row justify-content-center">
               <a
                 id="github-color"
                 class="btn color-white botoes"
