--- a/index.html
+++ b/index.html
@@ -1,161 +1,217 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="description" content="Erlon Jr. Portifólio" />
+    <meta
+      name="keywords"
+      content="SOFTWARE,SECURITY,ENGINEER,DJANGO,PYTHON,NODE,REACT,SQL,NOSQL,GITHUB,WORDPRESS,BLOG,LATTES,INSTAGRAM,FACEBOOK,TWITTER,LINKEDIN"
+    />
+    <meta name="author" content="Erlon Jr." />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <meta name="theme-color" content="#cabeed" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="#cabeed" />
+    <meta name="msapplication-navbutton-color" content="#cabeed" />
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="description" content="Erlon Jr. Portifólio">
-    <meta name="keywords"
-        content="SOFTWARE,SECURITY,ENGINEER,DJANGO,PYTHON,NODE,REACT,SQL,NOSQL,GITHUB,WORDPRESS,BLOG,LATTES,INSTAGRAM,FACEBOOK,TWITTER,LINKEDIN">
-    <meta name="author" content="Erlon Jr.">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta name="theme-color" content="#cabeed">
-    <meta name="apple-mobile-web-app-status-bar-style" content="#cabeed">
-    <meta name="msapplication-navbutton-color" content="#cabeed">
-
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
-        integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="style/style.css">
-    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://use.fontawesome.com/33310d222e.css">
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+      integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" type="text/css" href="style/style.css" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="https://use.fontawesome.com/33310d222e.css" />
     <link rel="shortcut icon" type="image/png" href="img/icon.png" />
     <script src="https://use.fontawesome.com/fd539724e0.js"></script>
     <title>ejrgeek.io</title>
-</head>
+  </head>
 
-<body id="bg">
-
-    <h1 class="eVisivel">Em breve disponivel para dispositivos moveis e telas menores</h1>
+  <body id="bg">
+    <h1 class="eVisivel">
+      Em breve disponivel para dispositivos moveis e telas menores
+    </h1>
 
     <div class="container-fluid">
-        <div class="row">
-            <div class="col-md-6">
+      <div class="col">
+        <div class="col-md-12">
+          <div class="container">
+            <br />
+            <br />
+            <br />
+            <div class="row justify-content-center text-center">
+              <h5 id="name">Erlon D. N. Júnior, 24 anos</h5>
+            </div>
+          </div>
 
-                <div class="center">
-                    <div class="container">
-                        <div class="row justify-content-center">
-                            <h5 id="name">
-                                Erlon D. N. Júnior, 22 anos
-                            </h5>
-                        </div>
-                    </div>
+          <div class="container">
+            <div class="row justify-content-center profission">
+              <div class="row">
+                <p>Professor • Dev • Pesquisador</p>
+              </div>
+            </div>
+          </div>
 
-                    <div class="container">
-                        <div class="row justify-content-center profission">
-                            <div class="row">
-                                <p>
-                                    Professor • Desenvolvedor • Pesquisador • Palestrante
-                                </p>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="container">
-                        <div class="row justify-content-center profission">
-                            <div class="row">
-                                <p>
-                                    SegInfo • Visão Comp. • IoT
-                                </p>
-                            </div>
-                        </div>
-                    </div>
-
-                    <br>
-                    <hr>
-                    <br>
-                    <div class="container">
-                        <div class="row justify-content-center profission">
-                            <p class="topico">Outros lugares importantes</p>
-                        </div>
-
-                        <div class="row justify-content-center">
-                            <a id="ejrgeekio-color" class="btn color-white botoes"
-                                href="https://ejrgeekio.com/nosso-time/" target="_blank">
-                                <img src="img/icon-white.png" alt="logo" style="height: 24px;">
-                            </a>
-                            <a id="linkedin-color" class="btn color-white botoes"
-                                href="https://www.linkedin.com/in/ejrgeek/" target="_blank"><i
-                                    class="fa fa-linkedin"></i></a>
-                            <a id="wordpress-color" class="btn color-white botoes"
-                                href="https://erlonbcc.wordpress.com/" target="_blank"><i class="fa fa-globe"></i></a>
-                            <a id="github-color" class="btn color-white botoes" href="https://github.com/ejrgeek"
-                                target="_blank"><i class="fa fa-github"></i></a>
-                            <a id="presentation" class="btn color-white botoes" href="https://speakerdeck.com/ejrgeek"
-                                target="_blank">
-                                <svg xmlns="http://www.w3.org/2000/svg"
-                                    class="icon icon-tabler icon-tabler-presentation" width="16" height="16"
-                                    viewBox="0 0 24 24" stroke-width="3" stroke="#ffffff" fill="none"
-                                    stroke-linecap="round" stroke-linejoin="round">
-                                    <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-                                    <line x1="3" y1="4" x2="21" y2="4" />
-                                    <path d="M4 4v10a2 2 0 0 0 2 2h12a2 2 0 0 0 2 -2v-10" />
-                                    <line x1="12" y1="16" x2="12" y2="20" />
-                                    <line x1="9" y1="20" x2="15" y2="20" />
-                                    <path d="M8 12l3 -3l2 2l3 -3" />
-                                </svg>
-                            </a>
-                            <a id="lattes-color" class="btn color-white botoes"
-                                href="http://lattes.cnpq.br/8430770538420375" target="_blank"><i
-                                    class="fa fa-folder"></i></a>
-                        </div>
-                    </div>
-                    <br>
-                    <hr>
-                    <br>
-                    <div class="container">
-                        <div class="row justify-content-center profission">
-                            <p class="topico">Trabalhos</p>
-                        </div>
-
-                        <ul class="list-group list-group-flush">
-                            <a id="curve-color" class="btn color-white botoes"
-                                href="https://play.google.com/store/apps/details?id=com.ejrgeek.curve_app"
-                                target="_blank">
-                                <img src="https://i.imgur.com/Hw0rlgC.jpg" />
-                                Baixe agora o Curve App
-                            </a>
-                        </ul>
-
-                    </div>
-                    <br>
-                    <hr>
-                    <br>
-
-                    <div class="container">
-                        <div class="row justify-content-center profission">
-                            <p class="topico">Contato</p>
-                        </div>
-
-                        <div class="row justify-content-center profission">
-                            <p>
-                                E-mail: <a href="mailto:erlon.junior@ejrgeekio.com">erlon.junior@ejrgeekio.com</a>
-                                <br>
-                                Instagram: <a
-                                    href="https://www.instagram.com/erlon.dn.jr/">@erlon.dn.jr</a>
-                            </p>
-                        </div>
-                    </div>
-                </div>
+          <div class="container">
+            <div class="row justify-content-center profission">
+              <div class="row">
+                <p>SegInfo • Visão Comp. • IoT</p>
+              </div>
+            </div>
+          </div>
+          <br />
+          <hr />
+          <br />
+          <div class="container">
+            <div class="row justify-content-center profission">
+              <p class="topico">Trabalhos</p>
             </div>
 
-            <div class="col-md-6">
-                <img class="bg-eu" src="img/eu-palito.jpeg" alt="">
+            <ul class="list-group list-group-flush">
+              <a
+                id="curve-color"
+                class="btn color-white botoes"
+                href="https://play.google.com/store/apps/details?id=com.ejrgeek.curve_app"
+                target="_blank"
+              >
+                <img src="img/curve.jpg" />
+                Baixe agora o Curve App
+              </a>
+              <a
+                id="wolabs-btn-color"
+                class="btn color-white botoes"
+                href="https://2wolabs.com.br"
+                target="_blank"
+              >
+                <img src="img/l-bg-p.png" />
+                Minha empresa
+              </a>
+            </ul>
+          </div>
+          <br />
+          <hr />
+          <br />
+          <div class="container">
+            <div class="row justify-content-center profission text-center">
+              <p class="topico">Outros lugares importantes</p>
             </div>
 
+            <div class="row justify-content-center">
+              <a
+                id="wolabs-color"
+                class="btn color-white botoes"
+                href="https://2wolabs.com.br/"
+                target="_blank"
+              >
+                <img src="img/logo.png" alt="logo" style="height: 24px" />
+              </a>
+              <a
+                id="linkedin-color"
+                class="btn color-white botoes"
+                href="https://www.linkedin.com/in/ejrgeek/"
+                target="_blank"
+                ><i class="fa fa-linkedin"></i
+              ></a>
+              <a
+                id="wordpress-color"
+                class="btn color-white botoes"
+                href="https://erlonbcc.wordpress.com/"
+                target="_blank"
+                ><i class="fa fa-globe"></i
+              ></a>
+            </div>
+
+            <br />
+
+            <div class="row justify-content-center">
+              <a
+                id="github-color"
+                class="btn color-white botoes"
+                href="https://github.com/ejrgeek"
+                target="_blank"
+                ><i class="fa fa-github"></i
+              ></a>
+              <a
+                id="presentation"
+                class="btn color-white botoes"
+                href="https://speakerdeck.com/ejrgeek"
+                target="_blank"
+              >
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  class="icon icon-tabler icon-tabler-presentation"
+                  width="16"
+                  height="16"
+                  viewBox="0 0 24 24"
+                  stroke-width="3"
+                  stroke="#ffffff"
+                  fill="none"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                >
+                  <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                  <line x1="3" y1="4" x2="21" y2="4" />
+                  <path d="M4 4v10a2 2 0 0 0 2 2h12a2 2 0 0 0 2 -2v-10" />
+                  <line x1="12" y1="16" x2="12" y2="20" />
+                  <line x1="9" y1="20" x2="15" y2="20" />
+                  <path d="M8 12l3 -3l2 2l3 -3" />
+                </svg>
+              </a>
+              <a
+                id="lattes-color"
+                class="btn color-white botoes"
+                href="http://lattes.cnpq.br/8430770538420375"
+                target="_blank"
+                ><i class="fa fa-folder"></i
+              ></a>
+            </div>
+          </div>
+
+          <br />
+          <hr />
+          <br />
+          <div class="container">
+            <div class="row justify-content-center profission">
+              <p class="topico">Contato</p>
+            </div>
+
+            <div class="row justify-content-center profission">
+              <p>
+                E-mail:
+                <a href="mailto:erlonjr@2wolabs.com.br"
+                  >erlonjr@2wolabs.com.br</a
+                >
+                <br />
+                Instagram:
+                <a href="https://www.instagram.com/erlon.dn.jr/"
+                  >@erlon.dn.jr</a
+                >
+              </p>
+            </div>
+          </div>
         </div>
+      </div>
     </div>
 
     <!-- JAVASCRIPT -->
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-        crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
-        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-        crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
-        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-        crossorigin="anonymous"></script>
-
-</body>
-
+    <script
+      src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+      integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+      integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+      integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
