Alteração do Portfolio
alteração da idade, trabalho e links

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <br />
             <br />
             <div class="row justify-content-center text-center">
-              <h5 id="name">Erlon D. N. Júnior, 24 anos</h5>
+              <h5 id="name">Erlon D. N. Júnior, 25 anos</h5>
             </div>
           </div>
 
@@ -59,39 +59,14 @@
           <div class="container">
             <div class="row justify-content-center profission">
               <div class="row">
-                <p>SegInfo • Visão Comp. • IoT</p>
+                <p>SegInfo • Visão Comp. • IoT • GameDev</p>
               </div>
             </div>
           </div>
           <br />
           <hr />
           <br />
-          <div class="container">
-            <div class="row justify-content-center profission">
-              <p class="topico">Trabalhos</p>
-            </div>
-
-            <ul class="list-group list-group-flush">
-              <a
-                id="curve-color"
-                class="btn color-white botoes"
-                href="https://play.google.com/store/apps/details?id=com.ejrgeek.curve_app"
-                target="_blank"
-              >
-                <img src="img/curve.jpg" />
-                Baixe agora o Curve App
-              </a>
-              <a
-                id="wolabs-btn-color"
-                class="btn color-white botoes"
-                href="https://2wolabs.com.br"
-                target="_blank"
-              >
-                <img src="img/l-bg-p.png" />
-                Minha empresa
-              </a>
-            </ul>
-          </div>
+          
           <br />
           <hr />
           <br />
@@ -101,14 +76,6 @@
             </div>
 
             <div class="row justify-content-center">
-              <a
-                id="wolabs-color"
-                class="btn color-white botoes"
-                href="https://2wolabs.com.br/"
-                target="_blank"
-              >
-                <img src="img/logo.png" alt="logo" style="height: 24px" />
-              </a>
               <a
                 id="linkedin-color"
                 class="btn color-white botoes"
