ref: remove tech

--- a/index.html
+++ b/index.html
@@ -126,8 +126,8 @@
                     </p>
                   </br>
                     <p class="about-disc"> 
-                      Tenho estudado e buscando aprender mais e mais sobre Blockchain/Solidity,
-                      Clojure e Desenvolvimento de Jogos 3D.
+                      Tenho estudado e buscando aprender mais e mais sobre Blockchain/Solidity
+                       e Desenvolvimento de Jogos 3D.
                     </p>
                   </div>
                 </div>
@@ -235,12 +235,6 @@
                           <img
                             src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/solidity/solidity-original.svg"
                             alt=Ssolidity Icon"
-                          />
-                        </li>
-                        <li>
-                          <img
-                            src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/clojure/clojure-original.svg"
-                            alt="Clojure Icon"
                           />
                         </li>
                         <li>
