--- a/index.html
+++ b/index.html
@@ -654,7 +654,7 @@
                             </div>
                             <div class="col-lg-12">
                               <div class="form-group">
-                                <label for="message"></label>
+                                <label for="message" id="fieldMessage"></label>
                                 <textarea
                                   name="message"
                                   id="message"
