feature: add my dapps

--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
       <div class="rn-slider-area">
         <div class="container">
           <div class="row row--30 pt--70 pt_sm--50">
+            <!-- LEFT SIDE CONTENT PAGE -->
             <div class="col-lg-6">
               <div class="d-flex flex-wrap align-content-start h-700">
                 <div
@@ -98,7 +99,7 @@
                 </div>
               </div>
             </div>
-            <!-- SIDE CONTENT PAGE -->
+            <!-- RIGHT SIDE CONTENT PAGE -->
             <div class="col-lg-6">
               <div class="sticky-home-wrapper">
                 <!-- about area -->
@@ -115,6 +116,38 @@
                   </div>
                 </div>
                 <!-- about area end -->
+
+                <!-- START dApps section -->
+                 
+                <div class="rn-skill-area single-card-sticky section-height aos-init">
+                  <div class="inner">
+                    <h5 class="title" id="title-dApps"></h5>
+                    <ul class="card-list">
+                      <li>
+                        <a
+                          href="https://doa-chain.vercel.app/"
+                          target="_blank"
+                          >DoaChain - Decentralized Donation
+                          <svg
+                            xmlns="http://www.w3.org/2000/svg"
+                            width="24"
+                            height="24"
+                            viewBox="0 0 24 24"
+                            fill="none"
+                            stroke="currentColor"
+                            stroke-width="2"
+                            stroke-linecap="round"
+                            stroke-linejoin="round"
+                            class="feather feather-arrow-right"
+                          >
+                            <line x1="5" y1="12" x2="19" y2="12"></line>
+                            <polyline points="12 5 19 12 12 19"></polyline></svg></a>
+                      </li>
+                      <!--  -->
+                    </ul>
+                  </div>
+                </div>
+                <!-- END dApps section -->
 
                 <!-- Start skill area -->
                 <div class="rn-skill-area section-height">
@@ -297,10 +330,7 @@
                   data-aos-duration="500"
                   data-aos-delay="200"
                   data-aos-once="true" -->
-                <div
-                  
-                  class="rn-skill-area single-card-sticky section-height aos-init"
-                >
+                <div class="rn-skill-area single-card-sticky section-height aos-init">
                   <div class="inner">
                     <h5 class="title" id="titleTalks"></h5>
                     <ul class="card-list">
