ref: reffix text

--- a/index.html
+++ b/index.html
@@ -269,8 +269,7 @@
 						<p class="letter-section">B</p>
 						<p class="letter-section">e</p>
 						<p class="letter-section">m</p>
-						<p class="letter-section">-</p>
-						<p class="letter-section">v</p>
+						<p class="letter-section">V</p>
 						<p class="letter-section">i</p>
 						<p class="letter-section">n</p>
 						<p class="letter-section">d</p>
