--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
 		<title>
-			Portfólio | Erlon Dantas - Engenheiro de Software e Professor
-			Universitário
+			Portfólio | Erlon Dantas - Engenheiro de Software e Professor Universitário
 		</title>
 
 		<meta
@@ -40,9 +39,9 @@
 			href="/assets/favicon/favicon-16x16.png"
 		/>
 		<link rel="manifest" href="/assets/favicon/site.webmanifest" />
+    <link rel="icon" type="image/x-icon" href="/assets/favicon/favicon.ico">
 
-		<!-- Open Graph / Redes Sociais (Facebook, LinkedIn) -->
-		<meta property="og:title" content="Portfólio | [Seu Nome]" />
+		<meta property="og:title" content="Portfólio | Erlon Dantas" />
 		<meta
 			property="og:description"
 			content="Engenheiro de Software e Professor Universitário"
@@ -53,10 +52,8 @@
 		<meta property="og:image:width" content="1536" />
 		<meta property="og:image:height" content="1024" />
 
-		<!-- aos cdn -->
 		<link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 
-		<!-- CSS -->
 		<link rel="stylesheet" href="/css/style.css" />
 
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -73,7 +70,7 @@
 
 		<link rel="preload" href="/css/style.css" as="style" />
 		<link rel="preload" href="/js/main.js" as="script" />
-		<link rel="preload" href="/i18n/i18n.js" as="script" />
+		<!-- <link rel="preload" href="/i18n/i18n.js" as="script" /> -->
 
 		<link rel="canonical" href="https://erlondnjr.com.br" />
 
