ref: texto neutro de boas vindas

--- a/index.html
+++ b/index.html
@@ -263,14 +263,15 @@
 						data-aos="fade-up"
 						data-aos-delay="0"
 					>
-						<p class="letter-section">B</p>
-						<p class="letter-section">e</p>
-						<p class="letter-section">m</p>
-						<p class="letter-section">V</p>
-						<p class="letter-section">i</p>
-						<p class="letter-section">n</p>
+						<p class="letter-section">S</p>
+						<p class="letter-section">a</p>
+						<p class="letter-section">u</p>
 						<p class="letter-section">d</p>
+						<p class="letter-section">a</p>
+						<p class="letter-section">c</p>
 						<p class="letter-section">o</p>
+						<p class="letter-section">e</p>
+						<p class="letter-section">s</p>
 						<p class="letter-section">(</p>
 						<p class="letter-section">)</p>
 						<p class="letter-section">;</p>
