--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
             com foco em desenvolvimento backend. Tenho experiência com práticas de DevOps, sempre 
             buscando criar soluções escaláveis, seguras e de alto desempenho.<br />
 						<br />
-						Sou palestrante e pesquisador independente das áreas de Segurança da Informação, Hardware Hacking e Internet das Coisas..
+						Sou palestrante e pesquisador independente das áreas de Segurança da Informação, Hardware Hacking e Internet das Coisas.
 					</p>
 					<div
 						class="contact-btn-div"
