--- a/index.html
+++ b/index.html
@@ -842,10 +842,9 @@
 										Crypto Feed Testnet Web3site
 									</article>
 									<p class="ProjectDescription">
-										StopScams: An AI-powered platform that
-										detects scam messages and supports users
-										through digital fraud with smart tools
-										and real-time help.
+										Crypto Feed dApp
+										<br>
+										Sua Rede Social Descentralizada
 									</p>
 									<div class="project-buttons">
 										<a
@@ -892,10 +891,9 @@
 										Web3 Voting Testnet Web3site
 									</article>
 									<p class="ProjectDescription">
-										Notesync: A note-taking app powered by
-										Supabase, designed to sync and store
-										your notes instantly with a smooth and
-										minimal user interface.
+										Votação on-chain | Votação descentralizada
+										<br>
+										Participe de decisões importantes sem intermediários
 									</p>
 									<div class="project-buttons">
 										<a
