--- a/index.html
+++ b/index.html
@@ -1150,7 +1150,7 @@
                 </a>
 
 							<a
-								href="https://www.linkedin.com/in/erlondnjr?original_referer="
+								href="https://www.linkedin.com/in/erlondnjr?original_referer=landing-page"
 								target="_blank"
 								aria-label="My Linkdin"
 								><svg
