--- a/index.html
+++ b/index.html
@@ -660,12 +660,13 @@
 							</li>
 
 							<li class="tech-stack-box" data-aos="fade-up">
+								
 								<img
-                            src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/java/java-original.svg"
-                            alt="Java Icon"
+                            src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/vuejs/vuejs-original.svg"
+                            alt="Vuejs Icon"
 									class="tech-stack-logo"
 								/>
-								<span class="tooltip">Java</span>
+								<span class="tooltip">Vue</span>
 							</li>
 
 							<li class="tech-stack-box" data-aos="fade-up">
